--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -32,6 +32,33 @@ declare global {
         duration:900,
         easing: 'ease',
     });
+
+    ScrollReveal().reveal('.reveal_interval01', {
+        distance: '1rem',
+        origin: 'bottom',
+        opacity: 0,
+        duration:900,
+        easing: 'ease',
+        interval: 100,
+    });
+
+    ScrollReveal().reveal('.reveal_delay', {
+        distance: '1rem',
+        origin: 'bottom',
+        opacity: 0,
+        duration:900,
+        easing: 'ease',
+        delay:200,
+    });
+
+    ScrollReveal().reveal('.reveal_tag', {
+        distance: '1rem',
+        origin: 'bottom',
+        opacity: 0,
+        duration:900,
+        easing: 'ease',
+        interval: 50,
+    });
 </script>
 
 <meta charset="UTF-8" />
