--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -23,6 +23,7 @@ import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
 import OQVABadge from "../../components/OQVABadge.astro";
+import BlogStripe from "../../components/BlogStripe.astro";
 
 import "../../styles/subpages.css"
 import "../../styles/collections.css"
@@ -138,6 +139,8 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
         </main>
 
         <ContactSection />
+
+		<BlogStripe/>
 
         <Footer />
 
