--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ContactSection from "../components/ContactSection.astro"
 import ContactBox from "../components/ContactBox.astro";
+import BlogStripe from "../components/BlogStripe.astro";
 
 import "../styles/button-ctnr.css";
 import "../styles/home.css"
@@ -53,7 +54,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						</div>
 					
 						<div class="flex column">
-							<a href={`tel:${TEL_HREF}`} aria-label="Call us"><span>London:</span> {TEL}</a>
+							<a href={`tel:${TEL_HREF}`} aria-label="Call us"><span>London: </span>{TEL}</a>
 					
 							<!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
 						</div>
@@ -387,6 +388,8 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 				</div>
 			</div>
 		</section>
+
+		<BlogStripe/>
 	</main>
 	<Footer />
 </Layout>
