--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -87,7 +87,7 @@
 .content_ctnr {
     width: clamp(9rem, 91vw, 87rem);
     margin-inline: auto;
-    margin-bottom: clamp(4rem,18vw,10rem);
+    margin-bottom: clamp(4rem,18vw,6rem);
     margin-top: calc(clamp(10rem, 55vw, 45rem) * -1);
     background-color: rgb(248 248 255 / 85%);
     backdrop-filter: blur(0.5rem);
@@ -104,16 +104,20 @@
     padding: clamp(3rem, 5vmin, 4rem) clamp(2.5rem, 6vmin, 5rem) 0;
 }
 
-article ul, article ol {
+.content_ctnr .post_content ul, .content_ctnr .post_content ol {
     padding: 0 0 0 4rem;
-    margin-block: 3rem;
+    margin-block: 1rem 2rem;
 }
 
-article li {
+.content_ctnr .post_content li {
+    margin-bottom: 0.3rem;
+}
+
+.content_ctnr .post_content {
     margin-bottom: 1rem;
 }
 
-article li::marker {
+.content_ctnr .post_content::marker {
     font-weight: 500;
 }
 
@@ -126,12 +130,12 @@ article h1 {
     margin-bottom: 1.2rem;
 }
 
-article p {
+.content_ctnr .post_content p {
     margin-bottom: 1rem;
     line-height: 1.65;
 }
 
-article p strong, article p em {
+.content_ctnr .post_content p strong, .content_ctnr .post_content p em {
     font-weight: 500;
 }
 
@@ -143,7 +147,7 @@ article p strong, article p em {
 }
 
 .content_ctnr .cta_ctnr {
-    margin-block: clamp(3rem, 5vmin, 4rem) 2rem;
+    margin-block: clamp(3rem, 5vmin, 4rem) 3rem;
     position: sticky;
     bottom: 1.5rem;
 }
