--- a/src/components/BlogStripe.astro
+++ b/src/components/BlogStripe.astro
@@ -19,6 +19,7 @@
         text-align: center;
         padding-block: clamp(5rem, 4vw, 8rem);
         border-block: 1.4rem solid var(--primary-e);
+        display: none;
     }
 
     .blog_stripe > .ctnr {
