--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,6 +26,6 @@ import CookieConsentBanner from "../components/CookieConsentBanner.astro";
         <Footer />
 
         <CookieConsentBanner></CookieConsentBanner>
-        <OQVABadge></OQVABadge>
+        <OQVABadge/>
     </body>
 </html>
