--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -44,6 +44,6 @@ import OQVABadge from "../components/OQVABadge.astro";
 		/>
 		
         <CookieConsentBanner></CookieConsentBanner>
-        <OQVABadge></OQVABadge>
+        <OQVABadge/>
 	</body>
 </html>
