--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -227,7 +227,7 @@ while (filteredPosts[firstRandomPos].data.title == postTitle || filteredPosts[se
     <Schema
         item={{
             "@context": "https://schema.org",
-            "@type": "Article",
+            "@type": "BlogPosting",
             headline: `${post.data.title}`,
             image: `${post.data.heroImage}`,
             "author": [{
