--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -144,7 +144,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
 
         <Footer />
 
-        <OQVABadge></OQVABadge>
+        <OQVABadge/>
 
         <Schema
             item={{
