--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -270,6 +270,7 @@ import { TEL, TEL_HREF } from "../consts";
         justify-content: center;
         align-items: center;
         z-index: 3;
+        margin-right: calc((var(--header-height) - clamp(2.5rem,9vw,4rem)) / -2);
     }
 
     .hambt > .ctnr {
